crates/obzenflow_adapters/tests/ui/effect_recovery/private_breaker_attachment_match.stderr
error[E0451]: field `kind` of struct `EffectPolicyAttachment` is private
 --> tests/ui/effect_recovery/private_breaker_attachment_match.rs:8:34
  |
8 |     let EffectPolicyAttachment { kind: _ } = attachment;
  |                                  ^^^^ private field

error: type `effect::attachment::EffectPolicyAttachmentKind` is private
 --> tests/ui/effect_recovery/private_breaker_attachment_match.rs:8:40
  |
8 |     let EffectPolicyAttachment { kind: _ } = attachment;
  |                                        ^ private type
